--- a/Presentacion/src/main/java/Vistas/BuscarEstudiante.form
+++ b/Presentacion/src/main/java/Vistas/BuscarEstudiante.form
@@ -64,40 +64,46 @@
     </Container>
     <Component class="javax.swing.JButton" name="btnPerfil">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Perfil"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="2" name="C:\Users\HP\OneDrive\Documents\ITSON\Clases5Semestre\BDA2.0\Java&#xb4;s\Repositorio Proyecto02\Sistema-match\Imagenes\miperfil.png"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnPerfilMouseClicked"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="420" y="530" width="-1" height="-1"/>
+          <AbsoluteConstraints x="450" y="530" width="40" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JButton" name="btnHome">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Home"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="2" name="C:\Users\HP\OneDrive\Documents\ITSON\Clases5Semestre\BDA2.0\Java&#xb4;s\Repositorio Proyecto02\Sistema-match\Imagenes\hogar.png"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnHomeMouseClicked"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="30" y="530" width="-1" height="-1"/>
+          <AbsoluteConstraints x="30" y="530" width="40" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JButton" name="btnBuscar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Buscar"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="2" name="C:\Users\HP\OneDrive\Documents\ITSON\Clases5Semestre\BDA2.0\Java&#xb4;s\Repositorio Proyecto02\Sistema-match\Imagenes\vaso.png"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnBuscarMouseClicked"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="220" y="530" width="-1" height="-1"/>
+          <AbsoluteConstraints x="240" y="530" width="40" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
